--- a/README
+++ b/README
@@ -1,1 +1,23 @@
+How to Play
 
+1. Starting the Game
+    The game begins with two tiles appearing on the grid, each typically showing a 2 or sometimes a 4.
+
+2. Moving the Tiles
+    Use the Arrow Keys (Up, Down, Left, Right) to move all the tiles on the board in a single direction.
+    Movement Rule: When you press a key, all tiles will slide as far as possible in that direction until they hit a wall or another tile.
+
+3. Merging Tiles
+    When two tiles with the same number collide during a move, they merge into a new tile with the sum of their values.
+        Example: Two 2 tiles merge to form a 4 tile. Two 1024 tiles merge to form a 2048 tile.
+    Merge Limit: Only one merge per tile per move is allowed. A single move can create multiple merges if different pairs of tiles collide and merge simultaneously.
+
+4. New Tile Appearance
+    After every successful move (a move that results in at least one tile moving or merging), a new tile (either a 2 or a 4) randomly appears in an empty spot on the grid.
+
+5. Winning the Game
+    You win the game when you successfully create a single tile with the number 2048.
+    Note: Many players continue playing after reaching 2048 to see how high they can score (e.g., 4096, 8192, etc.).
+
+6. Game Over
+    The game ends when the entire 4×4 grid is filled with tiles and you have no possible moves left (i.e., no adjacent tiles have the same value that could be merged).
