Enhance README with game description and mechanics
Added a detailed description of the game 2048, highlighting its gameplay mechanics and strategic elements.

--- a/README
+++ b/README
@@ -21,3 +21,14 @@ How to Play
 
 6. Game Over
     The game ends when the entire 4×4 grid is filled with tiles and you have no possible moves left (i.e., no adjacent tiles have the same value that could be merged).
+
+✨ The Game of 2048: A Simple Challenge, Endless Depth
+
+2048 is more than just a puzzle—it's an elegant, deceptively simple journey into numerical strategy. Set on a modest 4×4 grid, the game challenges your foresight and spatial thinking with nothing more than powers of two.
+
+Experience the flow:
+    The Concept: Start with small, humble tiles (the 2's and 4's) and, with every calculated move, slide them across the board.
+    The Magic: Witness the satisfying moment when identical numbers collide and merge, their values combining into a larger, more powerful single tile (8,16,32,…).
+    The Goal: Strategically manage the cascading numbers, keeping the board organized as you chase the ultimate, elusive prize: the magnificent 2048 tile.
+
+Easy to learn but impossibly difficult to master, 2048 is the perfect blend of luck and logic. Every successful merge is a triumph, and every move demands planning, making it a truly timeless and addictive numerical dance.
